[UPDATE] repo 이름 변경

--- a/tests/scripts/datasets/esic.ipynb
+++ b/tests/scripts/datasets/esic.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.esic_v1 import ESICv1"
+    "from sjaipy.datasets.esic_v1 import ESICv1"
    ]
   },
   {
