--- a/tests/scripts/hugging_face/tedlium.ipynb
+++ b/tests/scripts/hugging_face/tedlium.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.hugging_face.tedlium import Tedlium"
+    "from sjaipy.datasets.hugging_face.tedlium import Tedlium"
    ]
   },
   {
