--- a/tests/scripts/hugging_face/vox_populi.ipynb
+++ b/tests/scripts/hugging_face/vox_populi.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.hugging_face.vox_populi import VoxPopuli"
+    "from sjaipy.datasets.hugging_face.vox_populi import VoxPopuli"
    ]
   },
   {
