--- a/tests/scripts/l_hotse/tedlium.ipynb
+++ b/tests/scripts/l_hotse/tedlium.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.l_hotse import Tedlium"
+    "from sjaipy.datasets.l_hotse import Tedlium"
    ]
   },
   {
