--- a/tests/scripts/hugging_face/ksponspeech.ipynb
+++ b/tests/scripts/hugging_face/ksponspeech.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.hugging_face import KSPonSpeech"
+    "from sjaipy.datasets.hugging_face import KSPonSpeech"
    ]
   },
   {
