--- a/tests/scripts/hugging_face/zeroth_korean.ipynb
+++ b/tests/scripts/hugging_face/zeroth_korean.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.hugging_face import ZerothKorean"
+    "from sjaipy.datasets.hugging_face import ZerothKorean"
    ]
   },
   {
