--- a/tests/scripts/test.ipynb
+++ b/tests/scripts/test.ipynb
@@ -17,12 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.esic_v1 import ESICv1Dataset\n",
-    "from sj_ai_utils.datasets.hugging_face import ZerothKorean\n",
-    "from sj_ai_utils.datasets.hugging_face import KSPonSpeech\n",
-    "from sj_ai_utils.datasets.l_hotse import VoxPopuli\n",
-    "from sj_ai_utils.datasets.l_hotse import Tedlium\n",
-    "from sj_ai_utils.datasets.l_hotse import LibriSpeech"
+    "from sjaipy.datasets.esic_v1 import ESICv1Dataset\n",
+    "from sjaipy.datasets.hugging_face import ZerothKorean\n",
+    "from sjaipy.datasets.hugging_face import KSPonSpeech\n",
+    "from sjaipy.datasets.l_hotse import VoxPopuli\n",
+    "from sjaipy.datasets.l_hotse import Tedlium\n",
+    "from sjaipy.datasets.l_hotse import LibriSpeech"
    ]
   },
   {
@@ -152,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "ai-utils",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
