[UPDATE] sample audio 접근에 lazy하게 설정

--- a/tests/notebooks/l_hotse/ami.ipynb
+++ b/tests/notebooks/l_hotse/ami.ipynb
@@ -48,7 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_set = ami.load_dev_ihm(task=(\"asr\", \"diarization\"))"
+    "dataset = ami.load_dev_ihm(task=(\"asr\", \"diarization\"))\n",
+    "# dataset = ami.load_train_ihm(task=(\"asr\", \"diarization\"))\n",
+    "# dataset = ami.load_test_ihm(task=(\"asr\", \"diarization\"))\n",
+    "len(dataset)"
    ]
   },
   {
@@ -58,14 +61,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
+    "idx = -1\n",
     "id_set = set()\n",
-    "for i, sample in enumerate(dev_set):\n",
+    "for i, sample in enumerate(dataset):\n",
     "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
     "    if sample.id in id_set:\n",
     "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
     "    id_set.add(sample.id)\n",
     "\n",
+    "    print(i)\n",
     "    if i == idx:\n",
     "        break"
    ]
@@ -113,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ai-utils",
    "language": "python",
    "name": "python3"
   },
