[FEAT] dataset name

--- a/tests/notebooks/datasets/esic.ipynb
+++ b/tests/notebooks/datasets/esic.ipynb
@@ -7,8 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from pathlib import Path\n",
-    "from IPython.display import Audio"
+    "from IPython.display import Audio\n",
+    "\n",
+    "DATA_DIR = os.getenv(\"CONTAINER_DATA_DIR\")"
    ]
   },
   {
@@ -28,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ESIC_PATH = \"/workspaces/dev/.datasets/ESIC-v1.1\""
+    "ESIC_PATH = f\"{DATA_DIR}/.datasets/ESIC-v1.1\""
    ]
   },
   {
@@ -103,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "lia",
    "language": "python",
    "name": "python3"
   },
