--- a/tests/notebooks/l_hotse/tedlium.ipynb
+++ b/tests/notebooks/l_hotse/tedlium.ipynb
@@ -7,8 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from pathlib import Path\n",
-    "from IPython.display import Audio"
+    "from IPython.display import Audio\n",
+    "\n",
+    "DATA_DIR = os.getenv(\"CONTAINER_DATA_DIR\")"
    ]
   },
   {
@@ -28,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path(\"/workspaces/dev/.datasets/tedlium\")"
+    "path = Path(f\"{DATA_DIR}/.datasets/tedlium\")"
    ]
   },
   {
@@ -39,6 +43,16 @@
    "outputs": [],
    "source": [
     "tedlium = Tedlium(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce1b261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tedlium.prepare()"
    ]
   },
   {
@@ -102,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "21652c39",
    "metadata": {},
    "outputs": [],
@@ -113,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "lia",
    "language": "python",
    "name": "python3"
   },
