--- a/tests/notebooks/l_hotse/ami.ipynb
+++ b/tests/notebooks/l_hotse/ami.ipynb
@@ -7,8 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from pathlib import Path\n",
-    "from IPython.display import Audio"
+    "from IPython.display import Audio\n",
+    "\n",
+    "DATA_DIR = os.getenv(\"CONTAINER_DATA_DIR\")"
    ]
   },
   {
@@ -28,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path(\"/workspaces/dev/.datasets/ami\")"
+    "path = Path(f\"{DATA_DIR}/.datasets/ami\")"
    ]
   },
   {
@@ -39,6 +43,16 @@
    "outputs": [],
    "source": [
     "ami = AMI(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ea4ee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ami.prepare()"
    ]
   },
   {
