--- a/tests/notebooks/l_hotse/libri_speech.ipynb
+++ b/tests/notebooks/l_hotse/libri_speech.ipynb
@@ -7,8 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from pathlib import Path\n",
-    "from IPython.display import Audio"
+    "from IPython.display import Audio\n",
+    "\n",
+    "DATA_DIR = os.getenv(\"CONTAINER_DATA_DIR\")"
    ]
   },
   {
@@ -28,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path(\"/workspaces/dev/.datasets/libri_speech\")"
+    "path = Path(f\"{DATA_DIR}/.datasets/libri_speech\")"
    ]
   },
   {
@@ -39,6 +43,16 @@
    "outputs": [],
    "source": [
     "libri_speech = LibriSpeech(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d3f72bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "libri_speech.prepare()"
    ]
   },
   {
@@ -112,7 +126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "lia",
    "language": "python",
    "name": "python3"
   },
